# whattodo

./: .gitignore  .isort.cfg  .pylintrc  .travis.yml  Pipfile  README.md  pylintrc  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: main.yml
scripts/: lint.sh
src/: api.py  cli.py
tests/: conftest.py  test_api.py  test_cli.py  test_file_storage.py
tests/api/: conftest.py  test_board.py  test_task.py
whattodo/: api.py  cli.py  file_storage.py
whattodo/api/: board.py  task.py
