[tool.poetry]
name = "whattodo"
version = "0.0.0"
description = "CLI tool to help organization"
authors = ["Alexandre Xavier <ale.bxsantos@gmail.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
freezegun = "^1.0.0"
isort = "^5.6.4"
pytest = "^6.2.1"
black = "^20.8b1"
mypy = "^0.790"
tox = "^3.20.1"
pylint = "^2.6.0"
pytest-cov = "^2.10.1"
pylint-fail-under = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: mark tests as smoke, showing the health of the project (run using '-m \"smoke\"')",
]

[tool.black]
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[tool.mypy]
ignore_missing_imports = true
